module8/yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: http-server
    track: stable
  name: http-server
  namespace: cncamp
spec:
  replicas: 4
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 1
  selector:
    matchLabels:
      run: http-server
      track: stable
  template:
    annotations:
      prometheus.io/scrape: "true"
      prometheus.io/port: "80"
    metadata:
      labels:
        run: http-server
        track: stable
      namespace: cncamp
    spec:
      containers:
        - name: http-server
          image: registry.cn-hangzhou.aliyuncs.com/chenxinpei/http-server:v2.0
          command: ["/sbin/tini", "--", "http_server", "-v=5", "-alsologtostderr", "--config-path=/etc/http-server/http-server.yaml"]
          volumeMounts:
            - mountPath: /etc/http-server
              name: http-server-config
          readinessProbe:
            httpGet:
              port: 80
          resources:
            requests:
              cpu: 100m
              memory: 250Mi
            limits:
              cpu: 250m
              memory: 500Mi
      priorityClassName: high-priority
      volumes:
        - name: http-server-config
          configMap:
            name: http-server-config
