module8/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-server-service
  labels:
    run: http-server
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    run: http-server
